B-F Sandbox Full-Backup/src/objects/Salesforce_Object_Picklist__c.object
<CustomObject>
    <description>AUD Wombat only table.</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Salesforce_Object_Picklist</label>
    <nameField>
        <displayFormat>SOP-{0}</displayFormat>
        <label>Salesforce_Object_Picklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce_Object_Picklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>